--- a/frontend/src/pages/EventVerify.css
+++ b/frontend/src/pages/EventVerify.css
@@ -201,6 +201,16 @@
 	aspect-ratio: 1;
 	background-color: #333;
 	border-radius: 0.25rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+}
+
+.proof-passport-image {
+	width: 100%;
+	height: 100%;
+	/* object-fit: cover; */
 }
 
 .proof-passport-label {
