--- a/frontend/src/pages/EventVerify.css
+++ b/frontend/src/pages/EventVerify.css
@@ -1,19 +1,10 @@
-.verify-container {
-	min-height: 100vh;
-	background-color: #000000;
-	color: #FFFFFF;
-	display: flex;
-	flex-direction: column;
-}
-
 .verify-content {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
+	display: grid;
 	padding-bottom: 3rem;
 }
 
 .verify-visual {
+	min-height: 200px;
 	height: 40vh;
 	display: flex;
 	justify-content: center;
@@ -217,4 +208,4 @@
 	font-size: 0.75rem;
 	opacity: 0.7;
 	text-align: center;
-} 
+}
