--- a/frontend/src/shared/global.css
+++ b/frontend/src/shared/global.css
@@ -6,17 +6,21 @@
 	padding: 0;
 }
 
-body {
+:root,
+page {
+	--safeInset-top: 4rem;
+	--safeInset-bottom: 8rem;
+
+	@supports (padding: env(safe-area-inset-bottom)) {
+		--safeInset-top: env(safe-area-inset-top);
+		--safeInset-bottom: env(safe-area-inset-bottom);
+	}
+
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
 		Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	background-color: var(--color-background);
 	color: var(--color-text);
 	line-height: 1.5;
-}
-
-page {
-	--safeInset-top: 4rem;
-	--safeInset-bottom: 8rem;
 }
 
 /* Heading classes */
