--- a/frontend/src/pages/EventDetail.css
+++ b/frontend/src/pages/EventDetail.css
@@ -39,9 +39,9 @@
 	background-color: #333333;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	padding: 1rem;
+	align-items: end;
+	justify-content: end;
+	padding: 2rem;
 }
 
 .event-title {
