--- a/frontend/src/pages/EventVerify.css
+++ b/frontend/src/pages/EventVerify.css
@@ -189,6 +189,7 @@
 
 .proof-passport-placeholder {
 	width: 100%;
+	height: 5rem;
 	aspect-ratio: 1;
 	background-color: #333;
 	border-radius: 0.25rem;
@@ -199,9 +200,9 @@
 }
 
 .proof-passport-image {
+	aspect-ratio: 1;
 	width: 100%;
 	height: 100%;
-	/* object-fit: cover; */
 }
 
 .proof-passport-label {
