--- a/frontend/src/shared/layout.css
+++ b/frontend/src/shared/layout.css
@@ -11,7 +11,7 @@
 	--color-primary-dark: #E0E0E0;
 	--color-primary-light: #FFFFFF;
 	
-	--color-background: #000000;
+	--color-background: #111111;
 	--color-surface: #333333;
 	--color-text: #FFFFFF;
 	--color-text-light: #AAAAAA;
@@ -30,7 +30,7 @@
 /* Row and column layout */
 .row {
 	display: flex;
-	flex-direction: row;
+	align-items: center;
 	flex-wrap: wrap;
 	width: 100%;
 	gap: var(--gap-md);
