--- a/frontend/src/components/SectionTitle.css
+++ b/frontend/src/components/SectionTitle.css
@@ -1,3 +1,41 @@
+.section-header {
+	margin-bottom: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+}
+
+.section-title {
+	font-size: 1.1rem;
+	font-weight: 600;
+	margin-bottom: 0.25rem;
+	letter-spacing: 0.05rem;
+}
+
+.section-subtitle-container {
+	justify-content: center;
+}
+
+.section-subtitle {
+	font-size: 0.8rem;
+	color: var(--color-text-light);
+	letter-spacing: 0.05rem;
+}
+
+.section-subtitle-flair {
+	background-color: var(--color-text);
+	height: 1.5px;
+	width: 1em;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 0.5rem;
+}
+
 .section-title-container {
 	display: flex;
 	flex-direction: column;
