--- a/frontend/src/components/Navigation.css
+++ b/frontend/src/components/Navigation.css
@@ -4,12 +4,15 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
+	border-top-left-radius: 1em;
+	border-top-right-radius: 1em;
+	overflow: hidden;
 	padding-bottom: var(--safeInset-bottom);
 
 	display: flex;
 
 	background-color: var(--color-surface);
-	border-top: 1px solid var(--color-border);
+	box-shadow: 0 -1px var(--color-border);
 }
 
 .nav-item {
