--- a/frontend/src/pages/RewardEvent.css
+++ b/frontend/src/pages/RewardEvent.css
@@ -1,119 +1,145 @@
-.event-detail-container {
-	flex: 1;
+.reward-not-found {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+	padding: 2rem;
 }
 
-.event-hero {
-	position: relative;
+.error-message {
+	font-size: 1.25rem;
+	margin-bottom: 1.5rem;
+	text-align: center;
+}
+
+.reward-detail-container {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	background-color: #000000;
+	color: #FFFFFF;
+}
+
+.reward-hero {
 	width: 100%;
-	height: 30vh;
-	background-color: #333;
+	height: 35vh;
+	position: relative;
 }
 
-.event-image {
+.reward-image {
 	width: 100%;
 	height: 100%;
 	/* object-fit: cover; */
 }
 
-.event-image-placeholder {
+.reward-image-placeholder {
 	width: 100%;
 	height: 100%;
+	/* background-color: #333333; */
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	align-items: end;
+	justify-content: end;
+	padding: 2rem;
 	background: linear-gradient(135deg, #333 0%, #222 100%);
 	color: white;
 }
 
-.event-title {
-	font-size: 24px;
-	font-weight: 700;
-	margin-bottom: 8px;
-	text-align: center;
-	padding: 0 16px;
-}
-
-.event-subtitle {
-	font-size: 16px;
-	color: rgba(255, 255, 255, 0.7);
-}
-
-.event-content {
-	padding: 24px 16px;
-}
-
-.event-description {
-	margin-bottom: 32px;
-}
-
-.event-description-title {
-	font-size: 18px;
+.reward-title {
+	font-size: 1.5rem;
 	font-weight: 600;
-	margin-bottom: 16px;
+	text-align: center;
+	margin-bottom: 0.5rem;
+	letter-spacing: 0.1rem;
 }
 
-.event-description-text {
-	font-size: 16px;
+.reward-subtitle {
+	font-size: 0.875rem;
+	color: rgba(255, 255, 255, 0.7);
+	text-align: center;
+	letter-spacing: 0.05rem;
+}
+
+.reward-content {
+	padding-top: 1.5rem;
+	padding-bottom: 6rem;
+}
+
+.reward-description {
+	margin-bottom: 2rem;
+}
+
+.reward-description-title {
+	font-size: 1rem;
+	font-weight: 600;
+	margin-bottom: 1rem;
+}
+
+.reward-description-text {
+	font-size: 0.875rem;
 	line-height: 1.5;
-	margin-bottom: 16px;
-	color: rgba(255, 255, 255, 0.8);
+	color: rgba(255, 255, 255, 0.9);
+	margin-bottom: 0.5rem;
 }
 
 .read-more-link {
-	font-size: 14px;
-	color: #666;
-	text-decoration: underline;
-	margin-top: 8px;
+	font-size: 0.75rem;
+	color: rgba(255, 255, 255, 0.7);
+	/* text-transform: uppercase; */
+	letter-spacing: 0.05rem;
+	cursor: pointer;
+	margin-top: 0.5rem;
 }
 
-.event-links {
-	margin-bottom: 32px;
+.reward-links {
+	margin-bottom: 2rem;
 }
 
-.event-link-item {
+.reward-link-item {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 12px 0;
-	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+	padding: 1rem;
+	border-radius: 0.25rem;
+	background-color: #333333;
+	margin-bottom: 0.5rem;
+	cursor: pointer;
 }
 
-.event-link-text {
-	font-size: 16px;
+.reward-link-text {
+	font-size: 0.875rem;
 	font-weight: 500;
 }
 
-.event-link-arrow {
-	font-size: 20px;
-	color: rgba(255, 255, 255, 0.5);
+.reward-link-arrow {
+	font-size: 1rem;
+	color: rgba(255, 255, 255, 0.6);
 }
 
 .requirements-list {
-	margin-bottom: 32px;
+	display: flex;
+	flex-direction: column;
+	gap: 0.75rem;
+	margin-bottom: 2rem;
 }
 
 .requirement-item {
 	display: flex;
+	gap: 0.5rem;
 	align-items: flex-start;
-	margin-bottom: 12px;
 }
 
 .requirement-bullet {
-	font-size: 16px;
-	margin-right: 12px;
+	font-size: 1.25rem;
 	color: rgba(255, 255, 255, 0.7);
-	line-height: 1.5;
 }
 
 .requirement-text {
-	font-size: 16px;
+	font-size: 0.875rem;
 	line-height: 1.5;
-	flex: 1;
-	color: rgba(255, 255, 255, 0.8);
 }
 
 .action-button-container {
-	margin-top: 24px;
-	margin-bottom: 32px;
+	margin-top: 2rem;
 } 
