--- a/frontend/src/pages/RewardVerify.css
+++ b/frontend/src/pages/RewardVerify.css
@@ -3,8 +3,15 @@
 	padding-bottom: 3rem;
 }
 
+.verify-section {
+	background-color: rgba(255, 255, 255, 0.1);
+	padding: 1rem;
+	margin-bottom: 1rem;
+}
+
 .verify-visual {
-	min-height: 200px;
+	margin: 2rem;
+	min-height: 10rem;
 	height: 40vh;
 	display: flex;
 	justify-content: center;
@@ -13,8 +20,8 @@
 }
 
 .verify-image {
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
+	height: 100%;
 	/* object-fit: contain; */
 }
 
@@ -189,7 +196,8 @@
 
 .proof-passport-placeholder {
 	width: 100%;
-	height: 5rem;
+	min-height: 12rem;
+	height: auto;
 	aspect-ratio: 1;
 	background-color: #333;
 	border-radius: 0.25rem;
