--- a/frontend/src/pages/Explore.css
+++ b/frontend/src/pages/Explore.css
@@ -1,9 +1,9 @@
-.search-container {
+.Explore__search-container {
 	padding: 1rem;
 	margin-bottom: 1rem;
 }
 
-.search-input {
+.Explore__search-input {
 	background-color: rgba(255, 255, 255, 0.1);
 	border-radius: 0.5rem;
 	padding: 0.8rem 1rem;
@@ -11,46 +11,68 @@
 	align-items: center;
 }
 
-.search-icon {
+.Explore__search-icon {
 	width: 1rem;
 	height: 1rem;
 	margin-right: 0.5rem;
 	opacity: 0.5;
 }
 
-.search-placeholder {
+.Explore__search-placeholder {
 	color: rgba(255, 255, 255, 0.5);
 	font-size: 0.9rem;
 }
 
-.section {
+.Explore__section {
 	margin-bottom: 2.5rem;
 }
 
-.section-header {
-	margin-bottom: 1.5rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-}
-
-.membership-list, .events-list {
+.Explore__rewards-list {
 	display: flex;
 	flex-direction: column;
 	gap: 0.75rem;
 }
 
-.membership-card .row,
-.event-card .row {
-	padding-top: 4rem;
-	gap: 0.5em;
+.Explore__reward-card {
+	background-color: #333333;
+	border-radius: 0.75rem;
+	padding: 1.5rem;
+	margin-bottom: 0.75rem;
 }
 
-.membership-card .card-content,
-.event-card .card-content {
+.Explore__reward-card__layout {
+	display: flex;
+	align-items: center;
+	padding-top: 4rem;
+	gap: 0.5em;
+	justify-content: end;
+}
+
+.Explore__reward-card .Explore__reward-card__content {
 	display: grid;
 	justify-items: end;
+	flex: 1;
+	display: grid;
+	gap: 0.33em;
+}
+
+.Explore__reward-card__title {
+	text-align: right;
+	font-size: 1rem;
+	font-weight: 600;
+	letter-spacing: 0.05rem;
+}
+
+.Explore__reward-card__description {
+	text-align: right;
+	color: #999999;
+	font-size: 0.75rem;
+}
+
+.Explore__reward-card__icon {
+	width: 1.5em;
+	height: 1.5em;
+	opacity: 0.8;
 }
 
 @media (min-width: 768px) {
