--- a/frontend/src/pages/Products.css
+++ b/frontend/src/pages/Products.css
@@ -1,27 +1,28 @@
-.products-container {
+.Products {
 	padding: 16px;
 }
 
-.products-grid {
+.Products__grid {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 16px;
 }
 
-.product-category {
+.Products__category {
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 16px;
 }
 
-.product-image {
+.Products__category-image {
 	aspect-ratio: 1;
+	min-height: 12em;
 	background-color: #444444;
 	border-radius: 8px;
 	margin-bottom: 8px;
 }
 
-.product-title {
+.Products__category-title {
 	font-size: 14px;
 	font-weight: 600;
 	color: #ffffff;
